Add V3 support for LED and camera.

--- a/software/app_config.json
+++ b/software/app_config.json
@@ -1,7 +1,7 @@
 {
 	"reduction_factor": 0.90,
 	"compress_cores": 6,
-	"camera_platform":"picamera2",
+	"LEC_version": "V2",
 	"exposure": 30,
 	"framerate": 15,
 	"emails": "off",
